--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
         <p style='font-size: large'>I'm Raagini kakarla,  aspiring web developer. I'm currently living in USA,<br> 
             I love being creative. Highly curious about new front-end technologies<br>
             <br>
-            I got great desire to build beautiful interactive websites from my school days,Due to that passion I eventually landed into web development<br><br>
+            I have great desire to build beautiful interactive websites since my school days,Due to that passion I eventually landed into web development<br><br>
             I enjoy developing creative responsive websites using HTML, CSS, Bootstrap, JavaScript....
-            I got experience in building applications using Angular. Experience in MVC architecture and single page architecture<br><br>
+            I have got experience in building applications using Angular from scratch. Experience in MVC architecture and single page applications<br><br>
             My Current interest is Angular, Material, AWS.</p>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-4">
