--- a/resume.html
+++ b/resume.html
@@ -66,6 +66,10 @@
     <li>Familiarity with Software development life cycle (SDLC) phases especially agile.</li>
     <li>Good understanding of source code version control like GIT for maintaining versions.</li>
     <li>Used the latest HTML5 elements for video playback, content rendering using semantic tags such as article, section etc.</li>
+    <li>Worked with WordPress integrated link management.</li>
+    <li>Build client websites with WordPress.</li>
+    <li>Created websites using WordPress and specialized plugins for SEO</li>
+    <li>Customized WordPress installations using Dreamweaver.</li>
     <li>Experience on working with CSS2/3Background, Media Queries, Animations, and Layouts, positioning, border, margin, padding, table, Pseudo classes, Pseudo elements and CSS Box model.</li>
     <li>Expertise in Client-Side validations using HTML, Java Script, jQuery, Angular2.</li>
     <li>Understanding of CSS pre-processors like SASS and LESS</li>
@@ -149,6 +153,8 @@
 <b>Responsibilities:</b>
 <ul>
     <li>Designed UI using HTML, CSS, Bootstrap, Java Script and Angular2.</li>
+    <li>Installed variety of WordPress themes and changed the look and functionality.</li>
+    <li>Used different types of plugins to extend the features and functionality of a website.</li>
     <li>Implemented Angular 2 services to connect the web application to back-end APIs to POST/GET the data used in the application</li>
 <li>Implemented responsive web design using media queries </li>
 <li>Used JavaScript DOM manipulation and JavaScript event to generate the data result in UI.</li>
@@ -156,7 +162,7 @@
 <li>Used GIT for file version Management.</li>
 <li>Participated in scrum process attending daily stand up and completing tasks in sprints.</li>
 </ul>
-<p><b>Environment:</b> HTML5, CSS3, Bootstrap, JavaScript, JSON, Angular2, Jasmine, Karma, Agile, GIT  </p><br>
+<p><b>Environment:</b> HTML5, CSS3, Bootstrap, WordPress, JavaScript, JSON, Angular2, Jasmine, Karma, Agile, GIT  </p><br>
 
 
 <p><b>Client:</b> Metanoia Software Solutions Pvt Ltd Hyderabad, India.</p>
